# standard_knowledge

./: .codespellrc  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: filter.rs  knowledge_loader.rs  main.rs  qc.rs
cli/tests/cmd/: filter-search-no-match.toml  filter-search-no.toml  filter-search-xarray.toml  filter-search.toml  filter-unit.toml  filter-var-ioos.toml  filter-var.toml  filter-variable-no-match.toml  filter-variable-no.toml  get-short.toml  get-with-tests.toml  get-xarray.toml  help.toml  knowledge-lib-and-url.toml  knowledge-lib-explicit.toml  knowledge-path-dir.toml  knowledge-path-multiple-files.toml  knowledge-path-multiple.toml  knowledge-path-not-found.toml  knowledge-path-single.toml  knowledge-url-and-path.toml  knowledge-url-error.toml  knowledge-url-multiple.toml  knowledge-url-not-implemented.toml  knowledge-url-single.toml  no-command.toml  qc-config-static.toml  qc-config.toml  qc-list.toml  search-no.toml  search-xarray.toml  search.toml  variable-no-match.toml  variable-no.toml
cli/tests/load_knowledge/: air_temperature.yaml  multiple.yaml  odd-filename.yaml
core/: Cargo.toml  build.rs
core/src/: cf.rs  knowledge.rs  knowledge_include.rs  lib.rs  library_knowledge.rs  standard.rs  standards_filter.rs  standards_library.rs
core/src/qartod/: config.rs  mod.rs  static_qc.rs  static_qc_include.rs  types.rs  water_level.rs
core/src/qartod/examples/: context_config.yaml
core/standards/: air_pressure.yaml  air_temperature.yaml  depth.yaml  dew_point_temperature.yaml  eastward_sea_water_velocity.yaml  fluorescence_of_dissolved_organic_matter.yaml  fractional_saturation_of_oxygen_in_sea_water.yaml  latitude.yaml  longitude.yaml  mass_concentration_of_chlorophyll_in_sea_water.yaml  mass_concentration_of_oxygen_in_sea_water.yaml  mole_concentration_of_dissolved_molecular_oxygen_in_sea_water.yaml  mole_concentration_of_nitrate_in_sea_water.yaml  mole_fraction_carbon_dioxide_in_water.yaml  northward_sea_water_velocity.yaml  relative_humidity.yaml  sea_surface_height_above_geopotential_datum.yaml  sea_surface_temperature.yaml  sea_surface_wave_directional_spread_at_variance_spectral_density_maximum.yaml  sea_surface_wave_from_direction.yaml  sea_surface_wave_maximum_height.yaml  sea_surface_wave_mean_period.yaml  sea_surface_wave_period_at_variance_spectral_density_maximum.yaml  sea_surface_wave_significant_height.yaml  sea_water_density.yaml  sea_water_electrical_conductivity.yaml  sea_water_ph_reported_on_total_scale.yaml  sea_water_practical_salinity.yaml  sea_water_speed.yaml  sea_water_temperature.yaml  sea_water_turbidity.yaml  sea_water_velocity_to_direction.yaml  solar_irradiance.yaml  tidal_sea_surface_height_above_mean_higher_high_water.yaml  tidal_sea_surface_height_above_mean_lower_low_water.yaml  time.yaml  visibility_in_air.yaml  wind_from_direction.yaml  wind_speed.yaml  wind_speed_of_gust.yaml
js/: Cargo.toml  (+2 more)
py/: Cargo.toml  Readme.md  pyproject.toml
py/src/: lib.rs  standard.rs  standards_filter.rs  standards_library.rs  test_suite.rs
py/tests/: test_standards_library.py
standard_knowledge_cli/: Cargo.toml
standard_knowledge_cli/src/: main.rs  qc.rs
standard_knowledge_cli/tests/: cmd.rs
standard_knowledge_cli/tests/cmd/: get-full.trycmd  get-help.trycmd  get-no.toml  get-short.toml  get-short.trycmd  get-xarray.toml  get-xarray.trycmd  get.toml  help.toml  help.trycmd  no-command.toml  qc-get.toml  qc-help.toml  search-no-match.toml  search-xarray.toml  search.toml  search.trycmd
standard_knowledge_core/: Cargo.toml  build.rs
standard_knowledge_core/src/: cf.rs  ioos_categories.rs  lib.rs  library_suggestions.rs  main.rs  standard.rs  standard_names.rs  standards_library.rs
standard_knowledge_core/src/qartod/: config.rs  mod.rs  types.rs  water_level.rs
standard_knowledge_core/standards/: air_pressure_at_mean_sea_level.yaml  air_temperature.yaml
(+31 files in other folders)
