[package]
name = "standard_knowledge_cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "standard_knowledge"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
serde_yaml_ng = "0.10.0"
standard_knowledge = { path = "../core" }

[dev-dependencies]
trycmd = "0.15.10"
