[package]
name = "standard_knowledge"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[build-dependencies]
serde_yaml_ng = "0.10"
serde = { version = "1.0.223", features = ["derive"] }
flate2 = "1.0"

[[bin]]
name = "standard_knowledge_main"
path = "src/main.rs"

[dependencies]
dyn-clone = "1.0.20"
serde = { version = "1.0.223", features = ["derive"] }
serde_yaml_ng = "0.10"
flate2 = "1.0"
indicium = "0.6.5"
