[package]
name = "standard_knowledge_py"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_standard_knowledge_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.25.0"
standard_knowledge = { path = "../core" }
