[package]
name = "standard_knowledge"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[build-dependencies]
yaml-rust2 = "0.10.3"
serde_yaml_ng = "0.9"
serde = { version = "1.0.219", features = ["derive"] }
rmp-serde = "=1.3.0"

[[bin]]
name = "standard_knowledge_main"
path = "src/main.rs"

[dependencies]
rmp-serde = "=1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
